--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "snowpack build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "d3": "^6.2.0",
     "jquery": "^3.5.1"
   },
