--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
 {
-  "name": "visclass"
+  "name": "visclass",
+  "devDependencies": {
+    "snowpack": "^2.17.1"
+  },
+  "dependencies": {
+    "d3": "^6.2.0",
+    "jquery": "^3.5.1"
+  }
 }
