--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "visclass",
+  "scripts": {
+    "dev": "snowpack dev",
+    "build": "snowpack build"
+  },
   "devDependencies": {
-    "snowpack": "^2.17.1"
+    "@babel/core": "^7.12.7",
+    "@snowpack/plugin-babel": "^2.1.4",
+    "@snowpack/plugin-webpack": "^2.1.1",
+    "babel-loader": "^8.2.1",
+    "snowpack": "^2.17.1",
+    "webpack": "^5.6.0"
   },
   "dependencies": {
     "d3": "^6.2.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1"
   }
 }
