--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
-    "@snowpack/plugin-babel": "^2.1.4",
+    "@snowpack/plugin-optimize": "^0.2.9",
     "@snowpack/plugin-webpack": "^2.1.1",
-    "babel-loader": "^8.2.1",
     "snowpack": "^2.17.1",
     "webpack": "^5.6.0"
   },
