--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "dev": "snowpack dev"
   },
   "devDependencies": {
-    "snowpack": "^2.17.1"
+    "snowpack": "^2.18.5"
   },
   "dependencies": {
-    "d3": "^6.2.0",
+    "popper.js": "^1.16.1",
+    "bootstrap": "^4.5.3",
+    "d3": "^6.3.1",
     "jquery": "^3.5.1"
   }
 }
